--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="60dp"
     android:background="@drawable/bg_item_list">
     <CheckBox
         android:id="@+id/chk_list"
@@ -14,8 +14,8 @@
     <RelativeLayout
         android:id="@+id/rl_photo"
         android:layout_toRightOf="@id/chk_list"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/space10"
         android:layout_marginRight="@dimen/space10">
@@ -25,8 +25,9 @@
             android:layout_height="match_parent"
             android:src="@drawable/userpic"/>
         <TextView
-            android:layout_width="28dp"
-            android:layout_height="28dp"
+            android:id="@+id/tv_unread_count"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="-2dp"
@@ -39,7 +40,7 @@
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="60dp"
         android:paddingRight="@dimen/space10"
         android:layout_toRightOf="@+id/rl_photo"
         android:background="@drawable/bg_bottom_grey"
