--- a/app/src/main/res/layout/list_item_chat.xml
+++ b/app/src/main/res/layout/list_item_chat.xml
@@ -71,6 +71,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hi, Joe, looks great! :)"
+                android:singleLine="true"
+                android:ellipsize="middle"
                 android:textSize="@dimen/h3"
                 android:textColor="@color/colorTextInfo"
                 android:layout_marginTop="3dp"
