--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,16 +52,16 @@
     </style>
 
     <style name="Light" parent="android:TextAppearance">
-        <item name="fontPath">font/Nunito_Regular.ttf</item>
+        <!--<item name="fontPath">font/Nunito_Regular.ttf</item>-->
     </style>
 
     <style name="LightNav" parent="android:TextAppearance">
         <item name="android:textSize">@dimen/h3</item>
-        <item name="fontPath">font/Nunito_Regular.ttf</item>
+        <!--<item name="fontPath">font/Nunito_Regular.ttf</item>-->
     </style>
 
     <style name="ExtraLight" parent="android:TextAppearance">
-        <item name="fontPath">font/Nunito_Light.ttf</item>
+        <!--<item name="fontPath">font/Nunito_Light.ttf</item>-->
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
