--- a/app/src/main/res/layout/list_item_contact.xml
+++ b/app/src/main/res/layout/list_item_contact.xml
@@ -1,31 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="60dp"
     android:background="@drawable/bg_item_list">
     <ImageView
         android:id="@+id/iv_user_photo"
         android:layout_toRightOf="@id/chk_list"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/space10"
         android:layout_marginRight="@dimen/space10"
         android:src="@drawable/userpic"/>
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="60dp"
         android:paddingRight="@dimen/space10"
         android:layout_toRightOf="@+id/iv_user_photo"
         android:background="@drawable/bg_bottom_grey"
         android:gravity="center_vertical">
+
         <TextView
             android:id="@+id/tv_user_name"
+            style="@style/h2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/tv_phone_no"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:text="Laura Owens"
-            style="@style/h2"
-            android:textAppearance="@style/Light"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
+            android:textAppearance="@style/Light" />
+
+        <TextView
+            android:id="@+id/tv_phone_no"
+            style="@style/h3Info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:text="+254712929181"
+            android:textAppearance="@style/Light" />
+    </RelativeLayout>
 </RelativeLayout>
